<resources>
    <string name="app_name">Daily Quotes Motivational</string>
    <string name="home">HOME</string>
    <string name="categories">Categories</string>
    <string name="downloads">Downloads</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>
    <string name="exit_dialog">Are you sure you want to exit?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="category">CATEGORY</string>
    <string name="download">DOWNLOADS</string>

</resources>